--- a/player1.html
+++ b/player1.html
@@ -7,7 +7,7 @@
     <video-js id=example-video width=1280 height=720
               class="vjs-default-skin" controls>
       <source
-         src="http://localhost:8080/hls/stream1.m3u8"
+         src="http://localhost:8080/hls/stream1/multi.m3u8"
          type="application/x-mpegURL">
     </video-js>
     <script src="https://vjs.zencdn.net/7.4.1/video.js"></script>
